--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,7 @@
         <whitelist>
             <directory suffix=".php">src/</directory>
             <exclude>
+                <file>src/Task/InvalidaPropertyException.php</file>
             </exclude>
         </whitelist>
     </filter>
